--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,5 +5,25 @@
   <%= @category.name %>
 </p>
 
+<%= form_with(model: [ @category, @product ]) do |form| %>
+
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :price %>
+    <%= form.number_field :price %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+  
+<% end %>
+
+
+
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
